set git as configuration

--- a/microservice-configuration/src/main/resources/application.properties
+++ b/microservice-configuration/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.application.name=microservice-configuration
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:/config
 server.port=8071
+spring.application.name=microservice-configuration
+
+#below properties used to configure with local file system
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=classpath:/config
+
+#below properties used to configure with GitHub
+spring.profiles.active=git
+spring.cloud.config.server.git.uri=https://github.com/KhalimboevSardorbek/microservices-credentials.git
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
