--- a/microservice-configuration/src/main/resources/config/microservice-student-dev.properties
+++ b/microservice-configuration/src/main/resources/config/microservice-student-dev.properties
@@ -1,7 +1,7 @@
-microservice-teacher.msg=Welcome to development Student Microservice
-microservice-teacher.build.version=1
+microservice-student.msg=Welcome to development Student Microservice
+microservice-student.build.version=1
 
-microservice-teacher.mailDetails.hostname=development-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.port=8090
-microservice-teacher.mailDetails.from=development-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.subject=Your development Student Microservice Details
+microservice-student.mailDetails.hostname=development-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.port=8090
+microservice-student.mailDetails.from=development-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.subject=Your development Student Microservice Details
