--- a/microservice-configuration/src/main/resources/config/microservice-student-prod.properties
+++ b/microservice-configuration/src/main/resources/config/microservice-student-prod.properties
@@ -1,7 +1,7 @@
-microservice-teacher.msg=Welcome to production Student Microservice
-microservice-teacher.build.version=1
+microservice-student.msg=Welcome to production Student Microservice
+microservice-student.build.version=1
 
-microservice-teacher.mailDetails.hostname=production-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.port=8090
-microservice-teacher.mailDetails.from=production-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.subject=Your production Student Microservice Details
+microservice-student.mailDetails.hostname=production-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.port=8090
+microservice-student.mailDetails.from=production-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.subject=Your production Student Microservice Details
