--- a/microservice-configuration/src/main/resources/config/microservice-student.properties
+++ b/microservice-configuration/src/main/resources/config/microservice-student.properties
@@ -1,7 +1,7 @@
-microservice-teacher.msg=Welcome to default Student Microservice
-microservice-teacher.build.version=1
+microservice-student.msg=Welcome to default Student Microservice
+microservice-student.build.version=1
 
-microservice-teacher.mailDetails.hostname=default-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.port=8090
-microservice-teacher.mailDetails.from=default-microservice-student@khalimboevsardorbek.com
-microservice-teacher.mailDetails.subject=Your default Student Microservice Details
+microservice-student.mailDetails.hostname=default-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.port=8090
+microservice-student.mailDetails.from=default-microservice-student@khalimboevsardorbek.com
+microservice-student.mailDetails.subject=Your default Student Microservice Details
