--- a/microservice-configuration/src/main/resources/application.properties
+++ b/microservice-configuration/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.profiles.active=git
 spring.cloud.config.server.git.uri=https://github.com/KhalimboevSardorbek/microservices-credentials.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
+
+#This property is used to encrypt properties
+encrypt.key=khalimboevsardorbek
