--- a/microservice-configuration/pom.xml
+++ b/microservice-configuration/pom.xml
@@ -33,6 +33,21 @@
       <artifactId>spring-cloud-config-server</artifactId>
       <version>3.1.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+      <version>2.4.6</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
