--- a/microservice-configuration/src/main/resources/application.properties
+++ b/microservice-configuration/src/main/resources/application.properties
@@ -13,3 +13,15 @@ spring.cloud.config.server.git.default-label=main
 
 #This property is used to encrypt properties
 encrypt.key=khalimboevsardorbek
+
+#Properties of zipkin server
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+
+#Properties of rabbit server
+spring.zipkin.sender.type=rabbit
+spring.zipkin.rabbitmq.queue=zipkin
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
